# pyproject-versioning

./: README.md  flake.nix  pyproject.toml
nix/: shared.nix
